--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
               1234 Foodie Lane, Cityville, <br />
               State, Country
             </p>
-            <a href="mailto:info@foodiexpress.com" class="text-dark"
+            <a href="mailto:info@pourOVERperfection.com" class="text-dark"
               >info@pourOVERperfection.com</a
             >
           </div>
@@ -321,9 +321,9 @@
             <h3 class="fw-bold pb-3">Our Link</h3>
             <div class="d-flex flex-column">
               <a href="#" class="text-dark">Home</a>
-              <a href="#" class="text-dark">How it works</a>
-              <a href="#" class="text-dark">Features</a>
-              <a href="#" class="text-dark">Contact</a>
+              <a href="#how" class="text-dark">How it works</a>
+              <a href="#features" class="text-dark">Features</a>
+              <a href="#contact" class="text-dark">Contact</a>
             </div>
           </div>
           <div class="col-12 col-lg-4">
